Features under the section marked 'Current' are completed but pending release as a gem. If you need any of these, you'll need to use the latest source from the git repository.

Features under a numbered section are complete and available in the Wrest gem.

== 1.5.2
 * Updated dependencies - ActiveSupport, MultipartPost, Dalli and JRuby OpenSSL
 
== 1.5.1
 * Supports Ruby 2.x.x, JRuby 1.7.6 (and higher), JRuby 9.0.0.0.pre2

== 1.5.0
 * Introducing content type text/plain - pull request by buchin

== 1.4.7
 * Switch to using multi_json to manage Json backend to play nice with Rails 3.1.

== 1.4.6
 * Bump Builder dependency to allow both Builder 2.x and 3.x to be used

== 1.4.5
 * GH#107 alias :deserialize :deserialise

== 1.4.4
 * GH#105 Reduce Rubgems version requirements to 1.3.x or greater from > 1.5

== 1.4.3
 * GH#104 Allow default headers to be added to the uri that are then used for all requests
 * GH#31 Add explicit API for cookies

== 1.4.2
 * GH#102 Code and gemspec mismatch for json-jruby

== 1.4.1
 * GH#66 HTTPS requests using the Net::HTTP backend failing on Ruby 1.8.x

== 1.4.0
 * GH#96 Naive implementation of asynchronous requests using Eventmachine
 * GH#93 Since Wrest::Response is immutable, the results of Response#deserialise are cached

== 1.3.0
 * GH#95 Asynchronous requests on Wrest::Uri.

== 1.2.1
 * GH#91 Remove dependency on tzinfo

== 1.2.0
 * GH#80 Add a convenience API to make it easy to use the existing URI callback API

== 1.1.0
 * Caching support introduced. Includes Memcached support for the cache store. (GH# 69, 83, 87)

== 1.0.2
 * GH#12 Post Multipart support when using the Patron adapter
 * GH#72 Response code checkers: ok?, redirect?, created? etc.
 * GH#85 Do not auto-load Nokogiri/libxml-ruby and remove warnings at startup
 * GH#79 Update Patron version.

== 1.0.1
 * GH#61 Option propagate while converting uri to UriTemplate and back.
 * GH#64 Removed Caching.
 * GH#32 Callback for response status codes.