@@ -9,11 +9,22 @@
 
 module Wrest
   module AsyncRequest
-    class ThreadBackend 
+    # Uses a pool of Threads to make requests.
+    # Only recommended for production use on JRuby.
+    class ThreadBackend
+      attr_reader :thread_pool
+      def initialize(number_of_threads = 5)
+        @thread_pool = ThreadPool.new(number_of_threads)
+      end
+      
       def execute(request)
-        Thread.new do
-          request.invoke
-        end
+        @thread_pool.execute_eventually(request)
+      end
+      
+      # Uses Thread#join to wait until all
+      # background requests are completed.
+      def wait_for_thread_pool!
+        @thread_pool.join_pool_threads!
       end
     end
   end
