@@ -2,6 +2,9 @@ Features under the section marked 'Current' are completed but pending release as
 
 Features under a numbered section are complete and available in the Wrest gem.
 
+== Current (1.5.3)
+ * Implemented a thread pool for async requests using ThreadBackend.
+    
 == 1.5.2
  * Updated dependencies - ActiveSupport, MultipartPost, Dalli and JRuby OpenSSL
  
